# f2

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Justfile  README.md
.github/workflows/: ci.yaml  release.yaml
crypto/: private.key  public.key
resources/certificates/: generate-certificate-and-key.sh  new.crt  new.key  old.crt  old.key
scripts/: encrypt.sh  remove-containers.sh  run-in-docker.sh
src/: args.rs  common.rs  config.rs  crypto.rs  docker.rs  docker_registry.rs  health.rs  ipc.rs  load_balancer.rs  load_balancing.rs  main.rs  reconciler.rs  service_registry.rs
src/docker/: api.rs  client.rs  mod.rs  models.rs  registry.rs
src/load_balancer/: mod.rs  proxy.rs  tests.rs  tls.rs
src/service_registry/: matching.rs  mod.rs
