[package]
name = "f2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.79"
aws-config = "1.1.9"
aws-sdk-s3 = "1.21.0"
base64 = "0.22.0"
chrono = "0.4.37"
color-eyre = "0.6.3"
futures = "0.3.30"
hyper = { version = "0.14.25", features = ["client", "server", "tcp", "http1"] }
hyper-rustls = "0.24.1"
hyperlocal = "0.8.0"
indexmap = "2.2.6"
pico-args = "0.5.0"
rand = { version = "0.8.5", features = ["small_rng"] }
rsa = "0.9.6"
rustls = "0.21.6"
rustls-pemfile = "1.0.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serde_yaml = "0.9.33"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "time", "fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
hex = "0.4.3"
