[package]
name = "f2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.7.1"
async-trait = "0.1.81"
aws-config = "1.5.4"
aws-sdk-s3 = "1.42.0"
base64 = "0.22.1"
chrono = "0.4.38"
color-eyre = "0.6.3"
futures = "0.3.30"
http = "1.1.0"
http-body-util = "0.1.2"
hyper = "1.5.0"
hyper-util = { version = "0.1.9", features = ["client", "client-legacy", "http1", "http2", "server"] }
hyperlocal = "0.9.1"
indexmap = "2.2.6"
itertools = "0.13.0"
mutual-tls = { git = "https://github.com/alexander-jackson/mutual-tls.git", rev = "efeb451", version = "0.1.0" }
pico-args = "0.5.0"
rand = { version = "0.8.5", features = ["small_rng"] }
rsa = "0.9.6"
rustls = { version = "0.23.15", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2.2.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serde_yaml = "0.9.33"
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread", "time", "fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
hex = "0.4.3"
